--- a/force-app/main/default/layouts/Journey__c-Journey Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Journey__c-Journey Layout.layout-meta.xml
@@ -79,6 +79,10 @@
         <fields>Completed__c</fields>
         <relatedList>Task__c.Journey_del__c</relatedList>
     </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Template_Task__c.Journey__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
