--- a/force-app/main/default/layouts/Journey__c-Journey Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Journey__c-Journey Layout.layout-meta.xml
@@ -75,7 +75,7 @@
     </layoutSections>
     <relatedLists>
         <fields>NAME</fields>
-        <relatedList>Template_Task__c.Journey__c</relatedList>
+        <relatedList>Journey_Task__c.Journey__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
